--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<h1>Volunteer Form</h1>
 		</header>
 		
-		<fieldset margin-right="50px">
+		<fieldset>
 			<legend>My Info</legend>
 			<label>First Name:<input type="text" name="first_name_field"></label><br>
 			<br>
@@ -38,15 +38,15 @@
 
 		<fieldset>
 			<legend>Days Available:</legend>
-			<label>Sunday<input type="checkbox" name="available_field[]" value="Sunday"><br>
-			<label>Monday<input type="checkbox" name="available_field[]" value="Monday"><br>
-			<label>Tuesday<input type="checkbox" name="available_field[]" value="Tuesday"><br>
-			<label>Wednesday<input type="checkbox" name="available_field[]" value="Wednesday"><br>
-			<label>Thursday<input type="checkbox" name="available_field[]" value="Thursday"><br>
-			<label>Friday<input type="checkbox" name="available_field[]" value="Friday"><br>
-			<label>Saturday<input type="checkbox" name="available_field[]" value="Saturday"><br>
+			<label>Sunday<input type="checkbox" name="available_field[]" value="Sunday"></label><br>
+			<label>Monday<input type="checkbox" name="available_field[]" value="Monday"></label><br>
+			<label>Tuesday<input type="checkbox" name="available_field[]" value="Tuesday"></label><br>
+			<label>Wednesday<input type="checkbox" name="available_field[]" value="Wednesday"></label><br>
+			<label>Thursday<input type="checkbox" name="available_field[]" value="Thursday"></label><br>
+			<label>Friday<input type="checkbox" name="available_field[]" value="Friday"></label><br>
+			<label>Saturday<input type="checkbox" name="available_field[]" value="Saturday"></label><br>
 			<br>
-			<label for="our_textarea">Any Comments?</label><br>
+			<label>Any Comments?</label><br>
 			<textarea cols="30" rows="5" name="comments_field"></textarea>
 		</fieldset>
 		
